# InfraVox-Assignment

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
diffs/: diff1_python.txt  diff2_javascript.txt  diff3_typescript.txt
reviews/: diff1_review.json  diff2_review.json  diff3_review.json
scripts/: run_reviews.py
src/infravox_reviewer/: __init__.py  config.py  demo_ui.py  diff_parser.py  graph.py  llm.py  llm_review.py  main.py  models.py  reviewers.py  store.py
src/infravox_reviewer/reviewer_rules/: __init__.py  common.py  correctness.py  performance.py  security.py  style.py  test_coverage.py
tests/: conftest.py  test_api.py  test_demo_ui.py  test_diff_parser.py  test_graph.py  test_llm_review.py  test_reviewers.py  test_reviewers_generalized.py  test_run_reviews.py
