[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infravox-ai-code-reviewer"
version = "0.1.0"
description = "FastAPI and LangGraph AI code reviewer for InfraVox Assignment A"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "langgraph>=0.2,<1.0",
  "langchain>=0.2,<1.0",
  "langchain-groq>=0.1,<1.0",
  "python-dotenv>=1.0,<2.0",
  "httpx>=0.27,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q -p no:warnings"
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated.*",
  "ignore:The default value of `allowed_objects` will change in a future version.*:Warning:langgraph.cache.base.*"
]

[tool.ruff]
line-length = 100
target-version = "py310"
